# Learned-bloom-filter

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: CMakeLists.txt  bench_classical_bf.cpp  bench_compare.cpp  bench_dataset.hpp  bench_learned_bf.cpp  bench_predict.cpp
benchmarks/datasets/: .gitignore  gen_uniform_int.py
benchmarks/fixtures/: .gitignore  README.md  gen_urls_tranco.py  gen_urls_tranco.sh  gen_words_en.py  gen_words_en.sh
docs/: benchmarks.md  design.md
include/lbf/: bloom_filter.hpp  hashing.hpp  learned_bloom_filter.hpp  model.hpp
include/lbf/detail/: crc32.hpp
include/lbf/features/: ngram_hasher.hpp
include/lbf/models/: logistic_regression.hpp  onnx_model.hpp
results/: classical_bf.json  learned_bf_convergence.json  learned_bf_urls_100k.json  learned_bf_urls_small.json  learned_bf_words_100k.json
scripts/: plot_benchmarks.py  validate_auc.py
src/: CMakeLists.txt  learned_bloom_filter.cpp  model.cpp
src/features/: ngram_hasher.cpp
src/models/: logistic_regression.cpp  onnx_model.cpp
tests/: CMakeLists.txt  test_bloom_filter.cpp  test_learned_bloom_filter.cpp  test_model.cpp  test_placeholder.cpp
training/: CMakeLists.txt  train_main.cpp
